fix: z-index

--- a/css/about_us/directors/style.css
+++ b/css/about_us/directors/style.css
@@ -15,6 +15,7 @@
 .directors {
     padding: 160px 20px;
     background-color: var(--black);
+    margin: -1px 0;
 }
 
 .directors__body-top {
